    * Removed display order settings for comment module. Comment display
      order can now be customised using the Views module.
    * Added additional features to the default install profile, and implemented
      a "slimmed down" install profile designed for developers.
    * Image toolkits are now provided by modules (rather than requiring a manual
      file copy to the includes directory).
- News aggregator:
    * Added OPML import functionality for RSS feeds.
    * Optionally, RSS feeds may be configured to not automatically generate feed blocks.
- Search:
    * Added support for language-aware searches.
- Testing:
    * Added test framework and tests.
- Removed ping module:
    * Contributed modules with similar functionality are available.
- Refactored the "access rules" component of user module:
    * The user module now provides a simple interface for blocking single
      IP addresses. The previous functionality in the user module for restricting
      certain e-mail addresses and usernames is now available as a contributed module.
      Further, IP address range blocking is no longer supported and should be
      implemented at the operating system level.
- Removed throttle module:
    * Alternative methods for improving performance are available in other core and
      contributed modules.
- Added code registry:
    * Using the registry, modules declare their includable files via their .info file,
      allowing Drupal to lazy-load code as needed, resulting in significant performance
      and memory improvements.
- Theme system:
    * Converted the 'bluemarine' theme to a tableless layout.

Drupal 6.0, 2008-02-13
----------------------
- New, faster and better menu system.
- New watchdog as a hook functionality.
   * New hook_watchdog that can be implemented by any module to route log
     messages to various destinations.
   * Expands the severity levels from 3 (Error, Warning, Notice) to the 8
     levels defined in RFC 3164.